project3/minikube/project3-api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project3-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 5000
      targetPort: 5000
