project3/minikube/project3-client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project3-client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 8080
      targetPort: 8080
